# shelfcheck

./: .gitignore  package-lock.json  package.json
ml/: NOTES.md  README.md  pyproject.toml
ml/configs/: default.yaml
ml/scripts/: build_gallery.py  eval_recognition.py  train_encoder.py
ml/src/shelf_reco/: __init__.py  api.py  cli.py  config.py  schemas.py
ml/src/shelf_reco/detect/: __init__.py  detector.py  postprocess.py
ml/src/shelf_reco/embed/: __init__.py  backbone.py  encoder.py  finetune.py
ml/src/shelf_reco/gallery/: __init__.py  builder.py  index.py
ml/src/shelf_reco/planogram/: __init__.py  parser.py
ml/src/shelf_reco/recognize/: __init__.py  pipeline.py
ml/tests/fixtures/: sample_planogram.json
ml/tests/integration/: test_planogram_e2e.py
ml/tests/unit/: test_config.py  test_planogram.py  test_postprocess.py  test_schemas.py
prisma/: schema.prisma
prisma/migrations/20260521120625_init/: migration.sql
prisma/migrations/20260521131626_add_planogram_images/: migration.sql
public/: manifest.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/admin/audits/: page.tsx
src/app/admin/shelves/: page.tsx
src/app/admin/stores/: page.tsx
src/app/api/analyze/: route.ts
src/app/api/audits/: route.ts
src/app/api/shelves/: route.ts
src/app/api/stores/: route.ts
src/app/api/upload/: route.ts
src/app/audit/: layout.tsx  page.tsx
src/app/audit/[auditId]/: page.tsx
src/app/audit/history/: page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/map/: page.tsx
src/app/dashboard/trends/: page.tsx
src/components/audit/: AuditSession.tsx  CameraCapture.tsx  ComplianceGauge.tsx  ImageSourcePicker.tsx  ViolationCard.tsx
src/components/dashboard/: SimpleBarChart.tsx  SimpleLineChart.tsx  StoreMapView.tsx
src/lib/: prisma.ts
(+11 files in other folders)
