[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shelf-reco"
version = "0.1.0"
description = "Shelf & planogram recognition module — detect products, embed SKUs, match against gallery"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "ultralytics>=8.3",
    "open-clip-torch>=2.26",
    "timm>=1.0",
    "faiss-cpu>=1.8",
    "opencv-python-headless>=4.9",
    "Pillow>=10.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "typer[all]>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
gpu = [
    "faiss-gpu>=1.8",
]

[project.scripts]
recognize-shelf = "shelf_reco.cli:app_recognize"
parse-planogram = "shelf_reco.cli:app_planogram"
build-gallery = "shelf_reco.cli:app_gallery"
shelf-reco-api = "shelf_reco.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shelf_reco"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
strict = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["ultralytics.*", "cv2.*", "faiss.*", "open_clip.*", "timm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that load full model backbones (deselect with '-m \"not slow\"')",
]
